# bevy-test

./: .gitignore  Cargo.toml  flake.nix  scenes.blend
assets/: level1.glb  level2.glb  scenes.blend  small.glb
native-client/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  main.rs  protocol.rs  server.rs  shared.rs
