[workspace]
resolver = "2"
members = ["native-client", "server"]
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"

[profile.release.package."*"]
opt-level = 3
