[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"
authors = ["akosnad"]

[dependencies]
bevy = { version = "0.15", features = ["bevy_remote", "file_watcher", "jpeg"] }
bevy-inspector-egui = "0.29.1"
bevy_fps_controller = "0.15.0"
bevy_rapier3d = "0.28.0"
blenvy = { git = "https://github.com/ptsd/Blenvy", branch = "blenvy-bevy-0.15", version = "0.1.0-alpha.2" }
clap = { version = "4.5.28", features = ["derive"] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb", version = "0.4.0-rc.1" }
iyes_progress = { version = "0.13.1", features = ["assets"] }
lightyear = { version = "0.19.0", features = ["bevy_egui"] }
log = "0.4.25"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[features]
default = ["client", "server"]
client = []
server = []
